# LearningPlan

./: .gitignore  Git基本命令.txt  README.md
2016/: Blog笔记.txt  zookeeper笔记.txt
2016/Android/: 笔记.txt
2016/Android/_code/CriminalIntent/app/: build.gradle  proguard-rules.pro
2016/Android/_code/GeoQuiz/app/: build.gradle  local.properties
2016/C++/: Lisp.txt  articles.txt
2016/C++/C++ Concurrency in Action/: CPPConcurrencyInAction.txt
2016/C++/Direct2D/: Direct2D.cpp  Direct2D.h  Direct2D.rc  Direct2D.sln  Direct2D.vcxproj  Direct2D.vcxproj.filters  ReadMe.txt  Resource.h  stdafx.cpp
2016/C++/Effective.Modern.Cplusplus/: Modern C++.txt
2016/C++/_code/: CreateProcessAsUser.cpp  GetSIDByUserName.cpp  MD5.cpp  MD5.h  SHA1.cpp  SHA1.h  SHA2.h  bind.cpp  concat_string.cpp  condition_variable.cpp  ptrdiff_t.cpp  regex.cpp  singleton.cpp
2016/C++/_code/DesignPattern/: AbstractFactoryPattern.cpp  FactoryMethodPattern.cpp  SimpleFactory.cpp
2016/C++/_code/regex/: regex.sln
2016/C++/memory model/: ReadMe.txt
2016/C++/memory model/CppMemoryModel/: CppMemoryModel.sln
2016/cmake/learn/: 目录介绍.txt
2016/cmake/learn/t1/: CMakeLists.txt
2016/cmake/learn/t2/: CMakeLists.txt
2016/cmake/learn/t3/: CMakeLists.txt
2016/cmake/learn/t3/lib/: CMakeLists.txt  hello.cpp  hello.h
2016/cmake/learn/t4/: CMakeLists.txt
2016/cmake/learn/t4/src/: CMakeLists.txt
2016/cmake/learn/t6/: CMakeLists.txt
2016/database/: MySQL主主复制配置.txt  MySQL主从复制配置.txt  Partitioning_Sharding.txt  my.ini
2016/kafka/: kafka笔记.txt
2016/notes/: Assembly.txt  IO模型.txt  Intellij.txt  Log.txt  Reactor_Proactor.txt  SPI.txt  The Priamry-Backup Approach.txt  TheArtOfSQL.txt  Ubuntu上安装JDK.txt  liuv源码阅读笔记.txt  make知识点.txt  sql.txt  windbg手册.txt  zookeeper笔记.txt  分布式系统.txt  学习过程.txt  计算机启动过程.txt
2016/python/_code/: README.md  power.py  test.py  testFile.py
2016/python/_code/python_learning/: python_learning.sln
Win32-CustomCtrl/: TheBasic.sln
Win32-CustomCtrl/TheBasic/: TheBasic.sln  TheBasic.vcxproj.filters  custom.h  main.cpp
Win32-CustomCtrl/TheBasic/TheBasic/: TheBasic.vcxproj  custom.cpp
Win32-CustomCtrl/ThePainting/: ThePainting.vcxproj  ThePainting.vcxproj.filters  custom.c  custom.h  main.c
(+51 files in other folders)
